--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL = "https://human-reasoning.github.io/"
+baseURL: "https://human-reasoning.github.io/"
 title: Moritz-Maria von Igelfeld
 theme: PaperMod
 
