--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "https://human-reasoning.github.io/"
-title: Moritz-Maria von Igelfeld
+title: Laboratory for Human Reasoning
 theme: PaperMod
 
 enableInlineShortcodes: true
@@ -12,25 +12,22 @@ taxonomies:
 
 menu:
     main:
-        - name: Books
-          url: books/
+        - name: About Us
+          url: about/
           weight: 5 
-        - name: Papers
-          url: papers/
+        - name: People
+          url: people/
           weight: 2
-        - name: Courses
-          url: courses/
+        - name: Projects
+          url: projects/
           weight: 3
-        - name: Data
-          url: data/
+        - name: Publications
+          url: publications/
           weight: 4 
-        - name: Blog
-          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
-          weight: 6
 
 params:
     description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
-    author: Moritz-Maria von Igelfeld
+    author: Laboratory for Human Reasoning
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
     defaultTheme: light
@@ -54,50 +51,30 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Professor Dr von Igelfeld
-          subtitle: "I am a Professor in the Institute of Romance Philology at the University of Regensburg, Germany. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
-          imageUrl: "picture.jpeg"
+          title: Laboratory for Human Reasoning
+          subtitle: "We are a 🔬 cognitive neuroscience lab dedicated to understanding the neural basis of human 🤔 reasoning and 🔗 association. We use 🧩 cognitive tasks coupled with 🧠 neural and 👁️ behavioral recordings to investigate phenomena like 🔎 logical inference and 🎯 strategic planning. If you've ever wondered how the mind thinks its way through a game of ♟️ chess, so do we!"
+          imageUrl: "logo.png"
           imageWidth: 160
           imageHeight: 160
           buttons:
-            - name: Papers
-              url: papers/
-            - name: Data
-              url: data/
-            - name: Books
-              url: books/
-            - name: Courses
-              url: courses/
-            - name: Tags
-              url: tags/
-            - name: Archive
-              url: archive/
-            - name: Blog
-              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+            - name: About Us
+              url: about/
+            - name: People
+              url: people/
+            - name: Projects
+              url: projects/
+            - name: Publications
+              url: publications/
 
     socialIcons:
-        - name: CV
-          url: cv.pdf
         - name: Email
-          url: mailto:igelfeld@regensburg.edu
-        - name: Zoom
-          url: https://www.zoom.us/my/igelfeld
-        - name: Location
-          url: location/
-        - name: Office Hours
-          url: officehours/
-        - name: Google Scholar
-          url: https://scholar.google.com/citations?user=cL23w-4AAAAJ
+          url: mailto:humanreasoning.lab@gmail.com
         - name: GitHub
-          url: https://github.com/pmichaillat
-        - name: Substack
-          url: https://pmichaillat.substack.com
-        - name: YouTube
-          url: https://www.youtube.com/@pmichaillat
+          url: https://github.com/human-reasoning
         - name: Twitter
-          url: https://x.com/pmichaillat
-        - name: Bluesky
-          url: https://bsky.app/profile/pmichaillat.bsky.social
+          url: https://x.com/
+        - name: Google Scholar
+          url: https://scholar.google.com/
 
     assets:
         disableScrollBarStyle: true
@@ -105,7 +82,7 @@ params:
         hiddenInList: false
         hiddenInSingle: true
     label:
-      text: "Moritz-Maria von Igelfeld"
+      text: "Laboratory for Human Reasoning"
       icon: favicon.ico
       iconHeight: 18
 
