--- a/config.yml
+++ b/config.yml
@@ -41,7 +41,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["books","courses","papers","data"]
+    MainSections: ["about","people","projects","publications"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
