--- a/config.yml
+++ b/config.yml
@@ -27,8 +27,8 @@ menu:
         - name: News
           url: news/
           weight: 5
-        - name: Resources
-          url: resources/
+        - name: Join
+          url: join/
           weight: 6
 
 params:
@@ -47,7 +47,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["about","people","projects","publications","news","resources"]
+    MainSections: ["about","people","projects","publications","news","join"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
@@ -73,8 +73,8 @@ params:
               url: publications/
             - name: News
               url: news/
-            - name: Resources
-              url: resources/
+            - name: Join
+              url: join/
 
     socialIcons:
         - name: Email
