--- a/config.yml
+++ b/config.yml
@@ -79,12 +79,10 @@ params:
     socialIcons:
         - name: Email
           url: mailto:humanreasoning.lab@gmail.com
+        - name: Twitter
+          url: https://x.com/reasoning_lab/
         - name: GitHub
           url: https://github.com/human-reasoning
-        - name: Twitter
-          url: https://x.com/
-        - name: Google Scholar
-          url: https://scholar.google.com/
 
     assets:
         disableScrollBarStyle: true
